[package]
name = "drfiley"
version = "0.1.0"
edition = "2021"

[dependencies]
bebop = "2.6.0"
config = { version = "0.13.3", features = ["toml"] }
dotenv = "0.15.0"
futures = "0.3.28"
prost = "0.11.9"
prost-types = "0.11.9"
rusqlite = { version = "0.29.0", features = ["blob", "bundled", "i128_blob", "extra_check"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
xdg = "2.5.2"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[lib]
name = "drfiley"
path = "src/lib.rs"

[[bin]]
name = "drfiley-agent"
path = "src/bin/drfiley-agent/main.rs"

[build-dependencies]
tonic-build = "0.9.2"

