[package]
name = "drfiley"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
actix-web = "4.4.0"
actix-web-lab = "0.19.1"
actix-web-static-files = "4.0.1"
bebop = "2.6.0"
config = { version = "0.13.3", features = ["toml"] }
dotenv = "0.15.0"
futures = "0.3.28"
parking_lot = "0.12.1"
prost = "0.12.0"
prost-types = "0.12.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite = { version = "0.29.0", features = ["blob", "bundled", "i128_blob", "extra_check"] }
serde = { version = "1.0.160", features = ["derive"] }
static-files = "0.2.3"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"]}
tonic = "0.10.0"
tonic-reflection = "0.10.0"
xdg = "2.5.2"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[lib]
name = "drfiley"
path = "src/lib.rs"

[[bin]]
name = "drfiley-agent"
path = "src/bin/drfiley-agent/main.rs"

[build-dependencies]
tonic-build = "0.10.0"
static-files = "0.2.3"
